fix styles: details alignment

--- a/src/app/features/credential-details/credential-details.component.scss
+++ b/src/app/features/credential-details/credential-details.component.scss
@@ -71,7 +71,7 @@ mat-card-content.basic-actions-card-content{
 }
 .side-flexing{
   flex: 1 1 auto;
-  min-width: 300px;
+  width: min(300px, 40%);
 }
 .actions-container{
     padding-inline: 16px 0px;
